修正图片显示部分
图片显示部分的修正

--- a/EyeOfOldDriver/app/src/main/AndroidManifest.xml
+++ b/EyeOfOldDriver/app/src/main/AndroidManifest.xml
@@ -28,6 +28,10 @@
             android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
             android:screenOrientation="sensor">
         </activity>
+        <activity
+            android:name=".CalculateActivity"
+            android:label="@string/calculate">
+        </activity>
     </application>
 
 </manifest>
