实现方程组识别
实现方程组识别功能

--- a/EyeOfOldDriver/app/src/main/AndroidManifest.xml
+++ b/EyeOfOldDriver/app/src/main/AndroidManifest.xml
@@ -35,6 +35,11 @@
             android:label="@string/calculate"
             android:theme="@android:style/Theme.NoTitleBar">
         </activity>
+        <activity
+            android:name=".EquationActivity"
+            android:label="@string/calculate"
+            android:theme="@android:style/Theme.NoTitleBar">
+        </activity>
     </application>
 
 </manifest>
